--- a/work/work.html
+++ b/work/work.html
@@ -1,1 +1,78 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Paige Johnson</title>
+    <link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="This website displays ...." name="description">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+
+        <link rel="stylesheet" href="./sass/main.css" media="screen">
+
+  </head>
+
+<body>
+
+<!-- Navbar  -->
+<nav class="navbar navbar-expand-lg fixed-top"> 
+
+    <a class="navbar-brand" href="../index.html"><img src="../img/Logo.png" width="70" height="70"></a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+        <a class="nav-link" href="../index.html">HOME<span class="sr-only"></span></a>
+        </li>
+
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="work.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">WORK</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">              
+              <a class="dropdown-item" href="work.html">Wayfarer</a>
+              <a class="dropdown-item" href="work.html">Style My Space</a>
+            </div>
+         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">RESUME</a>
+        </li>
+      </ul>
+
+    </div>
+</nav>
+
+<!-- Page Content  -->
+<div class = "container">
+  <div class = "row p-5 pt-6">
+    <div id="content">
+      <h4>My Recent Work</h4>
+      
+      <p class="button"><button><a href="style.html"><img id="button1" src="../img/style.png"></a></button></p>
+
+      <p class="button"><button><a href="wayfarer.html"><img id="button1" src="../img/wayfarer.png"></button></a>
+
+        </div>      <!-- Content  -->
+      </div><!-- Row  -->
+    </div><!-- Container -->
+</div><!-- d flex -->
+
+<footer>
+  <p class="footer">© Paige Johnson | Last Updated 2022 <a href="mailto:paigejdesign@gmail.com"><img id="footer" src="../img/Email Icon.svg" alt="Email"/></a>
+  <a href="https://www.linkedin.com/in/paigejohnson3347/"><img id="footer" src="../img/LinkedIn Icon.png" alt="LinkedIn"/></a>
+  <a href="https://github.com/paigejohnson"><img id="footer" src="../img/Github Icon.png" alt="Github"/></a></p>
+</footer>
+
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+
+</body>
+</html>
