--- a/work/work.html
+++ b/work/work.html
@@ -53,9 +53,9 @@
     <div id="content">
       <h4>My Recent Work</h4>
       
-      <p class="button"><button><a href="style.html"><img id="button1" src="../img/style.png"></a></button></p>
+      <p class="button"><button><a href="work/work.html"><img id="button1" src="../img/style.png"></a></button></p>
 
-      <p class="button"><button><a href="wayfarer.html"><img id="button1" src="../img/wayfarer.png"></button></a>
+      <p class="button"><button><a href="work/work.html"><img id="button1" src="../img/wayfarer.png"></button></a>
 
         </div>      <!-- Content  -->
       </div><!-- Row  -->
