--- a/work/work.html
+++ b/work/work.html
@@ -32,10 +32,10 @@
         </li>
 
         <li class="nav-item dropdown active">
-          <a class="nav-link dropdown-toggle" href="work.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">WORK</a>
+          <a class="nav-link dropdown-toggle" href="..work/work.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">WORK</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">              
-              <a class="dropdown-item" href="work.html">Wayfarer</a>
-              <a class="dropdown-item" href="work.html">Style My Space</a>
+              <a class="dropdown-item" href="..work/work.html">Wayfarer</a>
+              <a class="dropdown-item" href="..work/work.html">Style My Space</a>
             </div>
          </li>
 
@@ -53,9 +53,9 @@
     <div id="content">
       <h4>My Recent Work</h4>
       
-      <p class="button"><button><a href="work/work.html"><img id="button1" src="../img/style.png"></a></button></p>
+      <p class="button"><button><a href="..work/work.html"><img id="button1" src="../img/style.png"></a></button></p>
 
-      <p class="button"><button><a href="work/work.html"><img id="button1" src="../img/wayfarer.png"></button></a>
+      <p class="button"><button><a href="..work/work.html"><img id="button1" src="../img/wayfarer.png"></button></a>
 
         </div>      <!-- Content  -->
       </div><!-- Row  -->
